--- a/testeTicketTech/Views/Chamados/Index.cshtml
+++ b/testeTicketTech/Views/Chamados/Index.cshtml
@@ -1,10 +1,18 @@
 ﻿@model IEnumerable<Chamados>
 
-<div class="container">
+<div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1>Chamados</h1>
-        <a class="btn btn-primary" asp-action="Cadastrar">Novo Chamado</a>
+        <h1 class="mb-0">Chamados</h1>
+        <div class="d-flex">
+            <a href="#" class="btn btn-success me-2">Exportar</a>
+            <a asp-action="Cadastrar" class="btn btn-primary">Novo Chamado</a>
+        </div>
     </div>
+
+    <!-- Aqui vem a tabela -->
+</div>
+       
+    
 
     <!-- Faz com que apareça a mensagem de sucesso de na ação -->
     @if(TempData["MensagemSucesso"]!= null)
