--- a/testeTicketTech/Views/Shared/_Layout.cshtml
+++ b/testeTicketTech/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Chamados" asp-action="Index"><i class="bi bi-journal-bookmark-fill mx-2"></i>Chamados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index"><i class="bi bi-people mx-2"></i></i>Usuários</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index"><i class="bi bi-people mx-2"></i>Usuários</a>
                         </li>
                     </ul>
                 </div>
