--- a/testeTicketTech/Views/Usuario/Index - Cópia.cshtml
+++ b/testeTicketTech/Views/Usuario/Index - Cópia.cshtml
@@ -20,8 +20,7 @@
         </div>
     }
 
-    <table id="minhaTabela" class="table table-hover">
-
+    <table id="table-usuarios" class="table table-hover">
         <thead>
             <tr>
                 <th>#</th>
