--- a/testeTicketTech/Views/Usuario/Index.cshtml
+++ b/testeTicketTech/Views/Usuario/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<testeTicketTech.Models.UsuarioModel>
+﻿<-- teste -->
+
+@model IEnumerable<testeTicketTech.Models.UsuarioModel>
 
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
