--- a/testeTicketTech/Views/Login/Index.cshtml
+++ b/testeTicketTech/Views/Login/Index.cshtml
@@ -8,6 +8,14 @@
 
     <img src="~/imagens/Logo.PNG" alt="Logo TicketTech">
 
+    @if (TempData["MensagemErro"] != null)
+    {
+        <div class="alert alert-danger text-light" role="alert">
+            @TempData["MensagemErro"]
+        </div>
+    }
+
+
     <div class="mb-3">
         <input type="text" asp-for="Login" class="form-control" placeholder="Login">
         <span class="text-danger">@Html.ValidationMessageFor(x => x.Login)</span>
