--- a/testeTicketTech/Views/Usuario/Index.cshtml
+++ b/testeTicketTech/Views/Usuario/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model IEnumerable<testeTicketTech.Models.UsuarioModel>
+﻿@model List<testeTicketTech.Models.UsuarioModel>
 
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
