--- a/testeTicketTech/Views/Shared/_Layout.cshtml
+++ b/testeTicketTech/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Chamados" asp-action="Index"><i class="bi bi-journal-bookmark-fill mx-2"></i>Chamados</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Chat" asp-action="Index"><i class="bi bi-robot mx-2"></i>Chat IA</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index"><i class="bi bi-people mx-2"></i>Usuários</a>
                         </li>
                     </ul>
@@ -40,8 +43,6 @@
             @RenderBody()
         </main>
     </div>
-
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/v/dt/dt-2.3.4/datatables.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
