Correção Menu duplicado e tela de cadastro(login)

--- a/testeTicketTech/Views/Cadastro/Index.cshtml
+++ b/testeTicketTech/Views/Cadastro/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model testeTicketTech.Models.UsuarioModel
 
 @{
+    Layout = "~/Views/Shared/_LayoutPublic.cshtml";
     ViewData["Title"] = "Cadastrar Usuário";
 }
+
 
 <div class="container mt-4">
     <h2>Cadastro de Usuário</h2>
