--- a/testeTicketTech/Views/Usuario/Create.cshtml
+++ b/testeTicketTech/Views/Usuario/Create.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Cadastrar Usuário";
 }
 
+@{
+    Layout = "~/Views/Shared/_LayoutPublic.cshtml";
+    ViewData["Title"] = "Cadastrar Usuário";
+}
+
+
 <div class="container mt-4">
     <h2>Cadastrar Novo Usuário</h2>
     <hr />
