Botão voltar em "cadastrate-se aqui"

--- a/testeTicketTech/Views/Cadastro/Index.cshtml
+++ b/testeTicketTech/Views/Cadastro/Index.cshtml
@@ -56,7 +56,8 @@
         </div>
 
         <button type="submit" class="btn btn-success">Cadastrar</button>
-        <a asp-action="Index" class="btn btn-secondary ms-2">Voltar</a>
+        <a asp-controller="Login" asp-action="Index" class="btn btn-secondary ms-2">Voltar</a>
+
     </form>
 </div>
 
