Finalização Função "Esqueceu as senha?"

--- a/testeTicketTech/Views/Login/Index.cshtml
+++ b/testeTicketTech/Views/Login/Index.cshtml
@@ -36,7 +36,7 @@
 
     <p class="mb-4 text-sm-end mx-auto">
         Esqueceu a senha?
-        <a asp-action="RedefinirSenha" asp-controller="Login" class="text-primary text-gradient">Clique aqui</a>
+        <a asp-action="RedefinirSenha" asp-controller="Login">Clique aqui</a>
     </p>
 
     <div class="mb-3 form-check">
